Major enhancements: HTML reports, improved JSON parsing, line number extraction, and bug fixes
- Added HTML formatter with interactive reports and executive dashboard
- Implemented automatic HTML report generation alongside JSON
- Enhanced code snippets with ±4 lines context and accurate line numbers
- Improved JSON parsing with robust escape sequence handling
- Added embedding dimension mismatch detection with helpful error messages
- Updated .gitignore to exclude user-specific files
- Updated README with HTML report documentation
- Fixed Rich markup errors in CLI error display
- Made ollama a default dependency

--- a/config.yaml
+++ b/config.yaml
@@ -81,10 +81,10 @@ file_discovery:
 
 # Output Settings
 output:
-  default_format: json  # Default output format (console, json, sarif)
+  default_format: json  # Default output format (console, json, sarif, html)
   color: true  # Enable colored console output
   verbose: false  # Enable verbose output
-  save_to_file: false  # Save output to file
+  save_to_file: true  # Save output to file (auto-saves JSON + HTML reports)
   output_directory: ./falconeye_reports  # Directory for reports
 
 # Logging
