--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ venv/
 ENV/
 env/
 .virtualenv
+*.pyc
 
 # IDEs
 .vscode/
@@ -37,6 +38,7 @@ env/
 *.swo
 *~
 .DS_Store
+*.code-workspace
 
 # Testing
 .pytest_cache/
@@ -46,14 +48,20 @@ htmlcov/
 .tox/
 .hypothesis/
 *.cover
-*.log
 
-# FalconEYE Data
+# FalconEYE Runtime Data (user-specific)
 falconeye_data/
 falconeye_reports/
 test_chromadb/
 *.db
 *.sqlite
+*.log
+falconeye.log*
+
+# User Configuration (should not be committed)
+# Users should create their own ~/.falconeye/config.yaml
+falconeye.yaml
+.falconeye.yaml
 
 # Demo/Test files
 demo_logs/
@@ -63,6 +71,10 @@ examples/
 tmp/
 temp/
 *.tmp
+/tmp/
+
+# Debug files
+/tmp/falconeye_failed_response_*.txt
 
 # Temporary analysis documents
 *_ANALYSIS.md
@@ -73,14 +85,11 @@ CLEANUP_PLAN.md
 # OS
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # Documentation builds
 docs/_build/
 docs/.doctrees/
-docs/*
-
-# Tests
-tests/*
 
 # Jupyter
 .ipynb_checkpoints/
@@ -91,7 +100,19 @@ tests/*
 .dmypy.json
 dmypy.json
 
+# Type checking
+.pytype/
+
 # Environment variables
 .env
 .env.local
 .env.*.local
+
+# Backup files
+*.bak
+*.backup
+*~
+
+# Lock files (optional - uncomment if not using lock files)
+# poetry.lock
+# Pipfile.lock
